# csr

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
backend/: README.md  __init__.py  server.py
frontend/: README.md  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Compare.jsx  ConceptBridges.jsx  CoverageHeatmap.jsx  LineageGraph.jsx  NumbersAudit.jsx  PromptCard.jsx  RenderedContent.jsx  ReportPreview.jsx  SectionDetail.jsx  SectionList.jsx  SourcePanel.jsx  SourceViewer.jsx
graph_rag/: README.md  audit.py  compare_reports.py  demo.py  fill_section.py  generate.py  gr_config.py  retrieve.py  text2cypher.py  trace_view.py
graph_rag/dataingestion/: build_graph.py  concept_graph.py  concepts.py  enrich.py  template_graph.py
graphrag_prototype/backend/: audit.py  fill_section.py  generate.py  retrieve.py  server.py  text2cypher.py
graphrag_prototype/dataingestion/: enrich.py  entities.py
graphrag_prototype/frontend/: index.html  legacy.html  package-lock.json  vite.config.js
graphrag_prototype/frontend/src/: App.jsx
hybrid_rag/: README.md  __init__.py  retriever.py
src/csr/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/csr/assembly/: __init__.py  docx_builder.py  traceability.py
tests/: test_section_doc.py
vector_rag/: README.md  cli.py  config.py  models.py  pipeline.py  prompt_store.py  section_doc.py
vector_rag/assembly/: docx_builder.py  figures.py  traceability.py
vector_rag/generation/: __init__.py  llm.py  prompts.py  style_ref.py  table_fill.py  verify.py  writer.py
vector_rag/ingestion/: docx_reader.py  sources.py  template_forms.py  template_parser.py
vector_rag/knowledge/: embeddings.py  graph_store.py  retriever.py  vector_store.py
(+13 files in other folders)
