[project]
name = "csr"
version = "0.1.0"
description = "Template-driven GenAI Clinical Study Report (CSR/CIR) generator with hybrid RAG and source traceability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[bedrock]>=0.116.0",
    "bedrock-agentcore>=1.18.0",
    "boto3>=1.43.48",
    "lancedb>=0.34.0",
    "langchain>=1.3.13",
    "langchain-aws>=1.6.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint-aws>=1.2.0",
    "networkx>=3.4.2",
    "nltk>=3.10.0",
    "pyarrow>=25.0.0",
    "python-docx>=1.2.0",
]

[project.scripts]
csr = "csr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csr"]
