[project]
name = "csr"
version = "0.1.0"
description = "Template-driven GenAI Clinical Study Report (CSR/CIR) generator with hybrid RAG and source traceability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[bedrock]>=0.116.0",
    "bedrock-agentcore>=1.18.0",
    "boto3>=1.43.48",
    "docx2pdf>=0.1.8",
    "fastapi>=0.139.0",
    "lancedb>=0.34.0",
    "langchain>=1.3.13",
    "langchain-aws>=1.6.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint-aws>=1.2.0",
    "mammoth>=1.12.0",
    "matplotlib>=3.10.9",
    "neo4j>=5.20,<6",
    "networkx>=3.0",
    "nltk>=3.10.0",
    "pyarrow>=25.0.0",
    "python-docx>=1.2.0",
]

[project.scripts]
csr = "vector_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vector_rag", "graph_rag", "hybrid_rag", "backend"]
